Added panel with our links, set the icon

--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!--
     This is the home page of the website.
-
     Last updated: Oct 1 2022
-    Last updated by: Morose#6189
+    Last updated by: Star#1895
 -->
 <!DOCTYPE html>
 
@@ -11,7 +10,9 @@
         <title> The University of Windsor Board Games Club </title>
         <meta name = "description" content = "Official website for The University of Windsor Board Games Club."/>
         <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
         <link rel = "stylesheet" href = "style.css">
+        <link rel = "icon" href = "images/logo.png">
     </head>
 
     <body style = "font-family: 'Courier New', Courier, monospace"> <!-- Possible TODO: Change font -->
@@ -25,6 +26,15 @@
 
         <!-- The info div is the parent div used to align about and info. -->
         <div id = "info">
+
+        <!-- Panel with links to our social medias -->
+        <div id = "social">
+            <h1> Join! </h1>
+            <ul>
+                <li>Discord: <a href = "https://discord.gg/Fh8yTVEB7z" class = "fab fa-discord"></a></li>
+            </ul>
+        </div>
+
         <section id = "about">
             <h1> About Us </h1>
             <!-- Always wrap large text. -->
@@ -47,7 +57,6 @@
             <li> Day, Month Date Year.
                 <ul> <li> Event Description </li> </ul>
             </li>
-
             If there is a pre-existing event put this format underneath it.
             This is how we will update the events for now until we implement
             the system to do automatically do it.
@@ -59,6 +68,7 @@
                 </li>
             </ul>
         </div>
+
         </div> <!-- End of info -->
     </body>
 </html>
