Added footer and adjusted home page a bit.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--
     This is the home page of the website.
-    Last updated: Oct 1 2022
-    Last updated by: Star#1895
+    Last updated: Oct 5 2022
+    Last updated by: Morose#6189
 -->
 <!DOCTYPE html>
 
@@ -10,7 +10,7 @@
         <title> The University of Windsor Board Games Club </title>
         <meta name = "description" content = "Official website for The University of Windsor Board Games Club."/>
         <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+        <link rel = "stylesheet" href = "https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity = "sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin = "anonymous">
         <link rel = "stylesheet" href = "style.css">
         <link rel = "icon" href = "images/logo.png">
     </head>
@@ -31,7 +31,7 @@
         <div id = "social">
             <h1> Join! </h1>
             <ul>
-                <li>Discord: <a href = "https://discord.gg/Fh8yTVEB7z" class = "fab fa-discord"></a></li>
+                <li> Discord: <a href = "https://discord.gg/Fh8yTVEB7z" class = "fab fa-discord"></a></li>
             </ul>
         </div>
 
@@ -64,11 +64,67 @@
         <div id = "events">
             <h1> Upcoming Events! </h1>
                 <li> Thursday, October 6th 2022. 
-                    <ul> <li> Undetermined </li> </ul>
+                    <ul> <li> In Person Gathering, Monopoly, Catan, and 7 Wonders have been chosen to be the games played by the community. </li> </ul>
+                </li>
+                <li> Friday, October 7th 2022.
+                    <ul> 
+                    <li> 
+                        D&D Group B Session 10 @ 6:30 PM EST in Tavern voice channel of our Discord server.
+                        Spectators welcome! 
+                    </li> 
+                    </ul>
                 </li>
             </ul>
         </div>
 
         </div> <!-- End of info -->
+
+        <footer> <!-- The footer -->
+            <section class = "category"> 
+                <h3> In Person </h3> 
+                <ul>
+                    <li> Games </li>
+                    <li> Hosts </li>
+                    <li> Events </li>
+                </ul> 
+            </section>
+
+            <section class = "category"> 
+                <h3> Online </h3> 
+                <ul>
+                    <li> Games </li>
+                    <li> Hosts </li>
+                    <li> Events </li>
+                </ul> 
+            </section>
+
+            <section class = "category"> 
+                <h3> Dungeons & Dragons </h3> 
+                <ul>
+                    <li> Campaigns </li>
+                    <li> Dungeon Masters </li>
+                    <li> Events </li>
+                </ul> 
+            </section>
+
+            <section class = "category"> 
+                <h3> Lancer </h3> 
+                <ul>
+                    <li> Missions </li>
+                    <li> Hosts </li>
+                    <li> Events </li>
+                </ul> 
+            </section>
+
+            <section class = "category"> 
+                <h3> Magic The Gathering </h3> 
+                <ul>
+                    <li> Decks </li>
+                    <li> Hosts </li>
+                    <li> Events </li>
+                </ul> 
+            </section>
+            <h5 id = "copyright"> The University of Windsor Board Games Club &copy; 2022 </h5>
+        </footer>
     </body>
 </html>
